--- a/app/views/register.erb
+++ b/app/views/register.erb
@@ -3,7 +3,11 @@
   <title>Registration</title>
 </head>
 <body>
-  <p>Stay a while, and listen!</p>
-  <p>Welcome, adventurer. You've successfully made it this far, but your journey has only just begun. To complete the next step, you'll need to create a form on this page that will direct the visitor to enter an email address and a password, and then click a button that will attempt to register them.</p>
-  <p> Once the form is in place, make sure it can post to a route in your RegistrationsController, and then go there for more instruction.</p>
-  <p> Remember to delete these instructions when complete so that the next visitor only sees the results of your hard work.</p>
+
+  <form action='/new' method="POST">
+  <input type="submit" id="submit" name="submit">
+    <p>Email</p><input type="text" name='email'>
+    <p>Name</p><input type="text" name='name'>
+    <p>Password</p><input type="text" name='password'>
+
+  </form>
