--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,7 +2,7 @@
   <head>
     <title>XYZZY</title>
   </head>
-  <body>
+  <!--<body>
   It's a bright, cold day in April and the clocks are already striking thirteen.
   <br /><br />
   You find yourself alone on a horribly-designed website with nothing but a mouse, a text editor, and, for some reason, access to the server code.<br />
@@ -10,4 +10,6 @@
   <br />
   <br />
   Remove these instructions when you have completed the task.
+  -->
+  <a href='/register'>Register</a>
 
