--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -6,8 +6,5 @@
   It's a bright, cold day in April and the clocks are already striking thirteen.
   <br /><br />
   You find yourself alone on a horribly-designed website with nothing but a mouse, a text editor, and, for some reason, access to the server code.<br />
-  Here, there should be a link to a place to register. You'll need to look at the application's routes and figure out how to link to that page. Once you've done that, click it, and see what happens.
-  <br />
-  <br />
-  Remove these instructions when you have completed the task.
+  Click <a href="/register" id="Register">here</a> to begin.
 
