--- a/app/views/new_user.erb
+++ b/app/views/new_user.erb
@@ -4,5 +4,5 @@
 </head>
 <body>
   Almost there, hero! You've registered the user, but we want to show them a message that they were successful, and remind them of the email address they used. The template for this is below. Fill in the email for them, and as always, destroy these instructions before the next person finds them.<br /> <br />
-  Thanks for registering for the site! You joined us with this email: <br />
+  Thanks for registering for the site! You joined us with this email: <%= session[:email] %><br />
   The next thing you should probably do is click <a href="/xyzzy">this link</a> to get started!
