had to change 'throw Unauthorized' to 'halt(403)'

--- a/app/views/register.erb
+++ b/app/views/register.erb
@@ -8,7 +8,7 @@
   To complete the next step, you'll need to create a form on this page that will direct the visitor to enter an email address and a password, and then click a button that will attempt to register them.
 
 <form action="/handler" method="post">
-<p>Email: <input type="text" name="name" value="test"></p>
+<p>Name: <input type="text" name="name" value="Joe"></p>
 <p>Email: <input type="text" name="email" value="test@test.com"></p>
 <p>Password: <input type="password" name="password" value="test"></p>
 <input type="submit" value="submit">
