--- a/app/views/register.erb
+++ b/app/views/register.erb
@@ -4,6 +4,23 @@
 </head>
 <body>
   <p>Stay a while, and listen!</p>
-  <p>Welcome, adventurer. You've successfully made it this far, but your journey has only just begun. To complete the next step, you'll need to create a form on this page that will direct the visitor to enter an email address and a password, and then click a button that will attempt to register them.</p>
-  <p> Once the form is in place, make sure it can post to a route in your RegistrationsController, and then go there for more instruction.</p>
+  <p>Welcome, adventurer. You've successfully made it this far, but your journey has only just begun.
+    To complete the next step, you'll need to create a form on this page that will direct the visitor to
+    enter an email address and a password, and then click a button that will attempt to register them.</p>
+  <p> Once the form is in place, make sure it can post to a route in your RegistrationsController, and then go there
+    for more instruction.</p>
   <p> Remember to delete these instructions when complete so that the next visitor only sees the results of your hard work.</p>
+
+  <form action="/new" method="POST">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="Name"/>
+    <label for="email">Email Address:</label>
+    <input type="text" id="email_address" name="email"/>
+    <label for="password">Password:</label>
+    <input type="text" id="password" name="password"/>
+
+    <input type="submit" value="submit"/>
+  </form>
+
+</body>
+</html>
